add content of circuitbreaker, timelimiter, rate limiter

--- a/javaBrains/Microservice_javabrains/Step01/movie-catalog-service/src/main/resources/application.properties
+++ b/javaBrains/Microservice_javabrains/Step01/movie-catalog-service/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.application.name=movie-catalog-service
 
 server.port=8081
 
-resilience4j.retry.instances.sample-api.maxAttempts=5
+#resilience4j.retry.instances.sample-api.maxAttempts=5
 
+resilience4j.timelimiter.instances.ratingTimeLimit.timeout-duration.seconds=20
