--- a/javaBrains/Microservice_javabrains/Step03/spring-boot-config/src/main/resources/application.properties
+++ b/javaBrains/Microservice_javabrains/Step03/spring-boot-config/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.application.name=spring-boot-config
 
 my.greeting=Hello again
 my.fullGreetDesc=Description:${my.greeting}
+
+my.list=one,two,three
+
+dbValues={connectionString:'http://....', userName:'foo', password:'pass'}
+
+db.connection={connectionString:'http://....', userName:'foo', password:'pass'}
+db.host=127.0.0.1
+db.port=1200 
